--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
@@ -23,7 +24,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "react": "^17.0.2",
+    "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
   },
